[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "container-probe"
version = "0.1.0"
description = "Inspect encrypted containers and guess the likely protocol or format."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]

[project.scripts]
container-probe = "container_probe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
